--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,14 @@
 body {
   background-color: #464646;
 }
+header {
+  width: 100%;
+  height: 60px;
+  background-color: aqua;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+}
