--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
   background-color: #464646;
 }
 /* Page Header */
-header {
+.page-header {
   width: 100%;
   height: 60px;
   background-color: aqua;
