Add flexbox styles to body element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,13 @@
 }
 body {
   background-color: #464646;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: start;
 }
 /* Page Header */
 .page-header {
