--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,14 +20,17 @@ body {
 /* Page Header */
 .page-header {
   width: 100%;
-  height: 60px;
-  background-color: aqua;
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: fixed;
   top: 0;
   z-index: 100;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 10%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 #nav-toggle-box {
   display: none;
