--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,18 @@ body {
   font-size: 1.5rem;
   text-transform: uppercase;
   margin-top: 10vh;
+  float: right;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: end;
+  gap: 1em;
+}
+#menu li {
+  padding: 1em 0;
+  border: 1.5px solid #fff;
+  padding: 5px 10px 5px 10px;
+  border-radius: 5px;
 }
 #navigation-menu {
   position: absolute;
