--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ body {
 #menu li {
   padding: 1em 0;
   border: 1.5px solid #fff;
-  padding: 5px 10px 5px 10px;
+  padding: 0.25em 0.5em;
   border-radius: 5px;
 }
 #navigation-menu {
