Add styles to contact form inputs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,11 +116,6 @@ main {
   background-color: #e91313;
   height: 500px;
 }
-/* Contact Section */
-#contact-us {
-  background-color: #30e913;
-  height: 500px;
-}
 /* Hero Section */
 #hero-section {
   background: url("../images/hero-img-mobile.webp");
@@ -149,6 +144,14 @@ main {
   font-style: italic;
   font-size: 3.5rem;
 }
+/* Contact Section */
+#contact-us-wrapper {
+  background-color: #30e913;
+  height: 500px;
+}
+#contact-us-wrapper > header {
+  margin-left: 0.5em;
+}
 /* Contact form */
 #contact-us-form {
   height: fit-content;
@@ -161,7 +164,67 @@ main {
   align-items: center;
   justify-content: start;
 }
-
+/* Contact Form */
+#contact-form {
+  color: #fff;
+  max-width: 500px;
+  padding: 0.4em;
+  align-self: center;
+}
+#contact-form label {
+  display: none;
+}
+#contact-form::placeholder {
+  color: #fff;
+}
+.text-input {
+  color: #fff;
+  width: 100%;
+  height: 30px;
+  background: #000000c1;
+  margin-bottom: 0.5em;
+  padding: 0.5em;
+  border: 1px solid #383838;
+  border-radius: 0.4em;
+}
+.text-input::placeholder {
+  color: #f5f5f5;
+}
+.text-input:hover {
+  border-color: #fb07ef;
+}
+textarea {
+  color: #ffffff;
+  resize: none;
+  background: #000000c1;
+  border-radius: 0.4em;
+  padding: 0.5em;
+  width: 100%;
+  border: 1px solid #383838;
+  opacity: 1;
+  height: 200px;
+}
+textarea::placeholder {
+  color: #f5f5f5;
+}
+textarea:hover {
+  border: 1px solid #fb07ef;
+}
+.submit {
+  margin-top: 0.5em;
+  border-radius: 0.3rem;
+  padding: 0.5em 1em 0.5em 1em;
+  background-color: #000000c1;
+  color: #fff;
+  text-align: center;
+  border: 1px solid #383838;
+}
+.submit:hover {
+  border: 1px solid #fb07ef;
+  background-color: #f5f5f5;
+  color: #000;
+  cursor: pointer;
+}
 /* Footer */
 footer {
   display: flex;
