--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Audiowide&family=Geologica:wght@100&family=Noto+Sans:wght@300&display=swap");
 h1,
 h2,
-h3 {
+h3,
+h4,
+h5,
+h6 {
   text-transform: uppercase;
   line-height: 1.5em;
   letter-spacing: 4px;
