--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,11 @@ h6 {
   color: #fff;
 }
 body {
-  background-color: #464646;
+  background-image: url("../images/mobile-bg.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   width: 100%;
   min-height: 100vh;
   display: flex;
@@ -116,7 +120,6 @@ main {
   width: 100%;
   gap: 1em;
   flex-grow: 1;
-  background-color: aqua;
 }
 /* Cars Section */
 #cars {
@@ -271,6 +274,12 @@ footer {
 }
 /* Media query: tablets and larger (870px and up) */
 @media screen and (min-width: 870px) {
+  body {
+    background-image: url("../images/desktop-bg.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
   /* Stylings for Header */
   .page-header {
     height: 70px;
