--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,10 +154,59 @@ main {
   font-style: italic;
   font-size: 3.5rem;
 }
+
+
+.row-1-wrap {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+  width: 100%;
+  height: fit-content
+background-color: #e9a913;
+flex: 1 1 auto;
+
+}
+h3, h4, h5 {
+  margin-bottom: 1em;
+}
+#opening-hours {
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+  justify-content: center;
+  align-items: center;
+}
+
+.row-1-wrap-address {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: start;
+  width: 100%;
+  height: fit-content;
+flex: 1 1 auto;
+gap: 1em
+}
+#email-and-number {
+  height: 100% ;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1em;
+}
+#phone {
+  justify-self: end;
+}
 /* Contact Section */
 #contact-us {
-  background-color: #30e913;
-  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  gap: 1em;
 }
 #contact-us > header {
   margin-left: 0.5em;
@@ -169,17 +218,13 @@ main {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: top;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: start;
 }
 /* Contact Form */
 #contact-form {
   color: #fff;
   max-width: 500px;
-  padding: 0.4em;
-  align-self: center;
+padding: 1em;
+  align-self: flex-start;
 }
 #contact-form label {
   display: none;
@@ -234,6 +279,20 @@ textarea:hover {
   background-color: #f5f5f5;
   color: #000;
   cursor: pointer;
+}
+#contact-information {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start;
+  max-width: 500px;
+  flex: 1 1 500px;
+  padding: 1em;
+}
+#google-map {
+  width: 100%;
+  height: 300px;
+  background-color: aqua;
+
 }
 /* Footer */
 footer {
