Add google maps iframe and style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,9 +290,8 @@ textarea:hover {
 }
 #google-map {
   width: 100%;
-  height: 300px;
-  background-color: aqua;
-
+  height: 400px;
+  margin-bottom: 60px;
 }
 /* Footer */
 footer {
