--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,7 @@ main {
 #cars {
   background-color: #e91313;
   height: 500px;
+  padding-top: 70px;
 }
 /* Hero Section */
 #hero-section {
@@ -207,6 +208,7 @@ gap: 1em
   flex-direction: column;
   flex-wrap: nowrap;
   gap: 1em;
+  padding-top: 70px;
 }
 #contact-us > header {
   margin-left: 0.5em;
@@ -291,7 +293,7 @@ textarea:hover {
 #google-map {
   width: 100%;
   height: 400px;
-  margin-bottom: 60px;
+ margin-bottom: 1em;
 }
 /* Footer */
 footer {
