--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,10 +153,10 @@ main {
 
 /* Cars Section */
 #cars {
-  background-color: #e91313;
   height: fit-content;
   padding-top: 70px;
 }
+/* Card Gallery */
 #card-wrapper {
   display: flex;
   flex-direction: row;
@@ -171,6 +171,28 @@ main {
   border-radius: 1em;
   flex: 1 1 300px;
   max-width: 360px;
+}
+.card-image {
+  height: 300px;
+  width: 100%;
+  border-radius: 1em 1em 0 0;
+  background-color: #383838;
+}
+.badges {
+  height: fit-content;
+  background-color: #00000093;
+  z-index: 999;
+  width: fit-content;
+  float: right;
+  border-radius: 0 1em 0 1em;
+  padding: 0.5em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex: 1 1 auto;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
 }
 /* Contact Section */
 .row-1-wrap {
