Add gap between icon and text in stats list

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,7 @@ main {
   display: flex;
   flex-direction: row;
   list-style: none;
+  gap: 0em 0.5em;
 }
 .car-information {
   padding: 0.5em;
