--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -357,11 +357,23 @@ textarea:hover {
   justify-content: center;
   align-items: center;
 }
-
+#row-2-wrap {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+  width: 100%;
+}
+iframe {
+  width: 100%;
+}
 #google-map {
   width: 100%;
-  height: 400px;
   margin-bottom: 1em;
+  overflow: hidden;
+  align-self: center;
 }
 /* Footer */
 footer {
