Change page header class to site navigation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ body {
   display: none;
 }
 /* Page Header */
-.page-header {
+.site-navigation {
   width: 100%;
   display: flex;
   justify-content: space-between;
