--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,6 +186,12 @@ main {
   background-repeat: no-repeat;
   background-size: cover;
 }
+#bmw-m5 {
+  background: url("../images/cars/bmw-m5.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .badges {
   height: fit-content;
   background-color: #00000093;
