Add Subaru STI card to index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,6 +192,12 @@ main {
   background-repeat: no-repeat;
   background-size: cover;
 }
+#subaru-sti {
+  background: url("../images/cars/subaru-sti.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .badges {
   height: fit-content;
   background-color: #00000093;
