Add max-width and align-self properties to #cars element on large screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -497,4 +497,8 @@ footer {
   #slogan > h1 > span {
     font-size: 4.5rem;
   }
+  #cars {
+    max-width: 1200px;
+    align-self: center;
+  }
 }
