--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,6 +210,12 @@ main {
   background-repeat: no-repeat;
   background-size: cover;
 }
+#honda-civic {
+  background: url("../images/cars/honda-civic.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .badges {
   height: fit-content;
   background-color: #00000093;
