--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -385,7 +385,13 @@ textarea:hover {
   flex-direction: column;
   max-width: 300px;
   justify-content: center;
-  align-items: center;
+  align-self: center;
+  margin-top: 2em;
+}
+.fa-regular,
+.fa-solid {
+  font-size: 1.3rem;
+  margin-right: 0.5em;
 }
 #row-2-wrap {
   display: flex;
