--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,6 +157,7 @@ main {
   height: fit-content;
   padding-top: 70px;
   margin-top: -150px;
+  padding: 70px 5px 0px 5px;
 }
 /* Card Gallery */
 #card-wrapper {
