Add smooth scrolling to HTML in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,9 @@ h6 {
   font-family: "Audiowide", sans-serif;
   margin-bottom: 1em;
 }
+html {
+  scroll-behavior: smooth;
+}
 * {
   margin: 0;
   padding: 0;
