Add loading screen animation in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,49 @@ html {
   color: #fff;
 }
 /* Body */
+/* Loading Screen */
+#loading {
+  opacity: 1;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow-x: hidden;
+  visibility: visible;
+  z-index: 999999;
+  position: absolute;
+  background-color: #000000eb;
+  animation: fade-away 0.2s 2s ease-in forwards;
+}
+#wheel {
+  opacity: 0;
+  animation: fade-in 0.2s 0.1s ease-in forwards,
+    wheel-spin 3.5s 0.5s ease-in none, speed-off 0.9s 1.6s ease-in forwards;
+}
+@keyframes wheel-spin {
+  to {
+    transform: rotateZ(9080deg);
+  }
+}
+@keyframes speed-off {
+  to {
+    transform: translateX(4000px);
+  }
+}
+@keyframes fade-away {
+  to {
+    visibility: hidden;
+    z-index: -999;
+    opacity: 0;
+  }
+}
+
+@keyframes fade-in {
+  to {
+    opacity: 1;
+  }
+}
 body {
   background-image: url("../images/mobile-bg.svg");
   background-position: center;
@@ -547,5 +590,49 @@ footer {
   #cars {
     max-width: 1200px;
     align-self: center;
+  }
+}
+/* Loading Screen */
+#loading {
+  opacity: 1;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow-x: hidden;
+  visibility: visible;
+  z-index: 999999;
+  position: fixed;
+  background-color: #000000eb;
+  animation: fade-away 0.2s 2s ease-in forwards;
+  top: 0;
+  left: 0;
+}
+#wheel {
+  opacity: 0;
+  animation: fade-in 0.2s 0.1s ease-in forwards,
+    wheel-spin 3.5s 0.5s ease-in none, speed-off 0.9s 1.6s ease-in forwards;
+}
+@keyframes fade-in {
+  to {
+    opacity: 1;
+  }
+}
+@keyframes wheel-spin {
+  to {
+    transform: rotateZ(9080deg);
+  }
+}
+@keyframes speed-off {
+  to {
+    transform: translateX(4000px);
+  }
+}
+@keyframes fade-away {
+  to {
+    visibility: hidden;
+    z-index: -999;
+    opacity: 0;
   }
 }
