--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,7 +195,8 @@ main {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  aspect-ratio: 9/16;
+  width: 100%;
+  height: 600px;
   margin-bottom: -50px;
 }
 #slogan {
@@ -222,7 +223,7 @@ main {
 #cars {
   height: fit-content;
   padding-top: 70px;
-  margin-top: -150px;
+  margin-top: -70px;
   padding: 70px 5px 0px 5px;
 }
 /* Card Gallery */
@@ -574,8 +575,9 @@ footer {
     background: url("../images/hero-img-1920x900.webp");
     background-position: top;
     background-repeat: no-repeat;
-    background-size: contain;
-    aspect-ratio: 16/9;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
   }
   #slogan {
     height: fit-content;
